objects/Attendant__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Late_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trainee__c</fullName>
        <label>Trainee</label>
        <referenceTo>Trainee__c</referenceTo>
        <relationshipLabel>Attendants</relationshipLabel>
        <relationshipName>Attendants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Training_Course__c</fullName>
        <label>Training Course</label>
        <referenceTo>Training_Course__c</referenceTo>
        <relationshipLabel>Attendants</relationshipLabel>
        <relationshipName>Attendants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Attendant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Attendant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Marked_for_a_late_fee</fullName>
        <active>true</active>
        <description>attendees fee is €100 more than the course fee because they are marked for a late fee.</description>
        <errorConditionFormula>AND( NOT(    Fee_Amount__c = (   Training_Course__r.Fee__c+ 100)) , Late_Fee__c  = True)</errorConditionFormula>
        <errorMessage>attendees fee must be €100 more than the course fee because they are marked for a late fee.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>slots_available_to_create_records</fullName>
        <active>true</active>
        <description>Prevent the creation of a attendant records if all the slots available have already been taken.</description>
        <errorConditionFormula>Training_Course__r.Number_of_places_available__c  &lt;=  Training_Course__r.Total_number_of_attendees__c</errorConditionFormula>
        <errorMessage>There is no slots available.</errorMessage>
    </validationRules>
</CustomObject>